styles/style.css
.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  /* выше установили ограничения для секции */
  background-color: #f2f2f2;
  display: flex;
  align-items: center;
  position: relative;
}

.logo {
  width: 228px;
  height: 32px;
  background-image: url('../images/logo_place_header.svg');
  z-index: 2;
}

.logo__place_header {
  position: absolute;
  top: 30px;
  left: 64px;
  z-index: 2;
}

.header__title {
  font-size: 102px;
  font-weight: 600;
  line-height: 96px;
  max-width: 730px;
  margin: 0;
  padding-left: 64px;
  z-index: 2;
}

.header__subtitle {
  font-size: 18px;
  font-weight: normal;
  line-height: 25px;
  max-width: 388px;
  margin: 0;
  position: absolute;
  bottom: 30px;
  left: 64px;
  z-index: 2;
}

.header__link {
  text-decoration: none;
  color: #2f80ed;
}

.header__main-illustration {
  width: 765px;
  height: 608px;
  display: flex;
  position: absolute;
  justify-content: end;
  z-index: 1;
  bottom: 0;
  right: 0;
}

/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
.header__square-pic {
  width: 568px;
  height: 568px;
  background-color: #2f80ed;
  position: absolute;
  top: 64px;
  right: 0;
}

.description {
  display: flex;
  justify-content: center;
  margin-top: 100px;
}

.two-columns {
  display: flex;
  justify-content: space-between;
  width: 80%;
  margin: auto;
}

.two-columns__brief {
  color: #2f80ed;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  width: 175px;
  margin: 0;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
  flex-direction: column;

}

.two-columns__paragraph {
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  margin: 0;
}

.two-columns__paragraph:nth-of-type(2) {
  margin: 30px 0;
}

.two-columns__span-accent {
  font-weight: 600;
}

.digits {
  margin: 100px 0 100px;
}

.section-title {
  margin: 0 auto;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
  text-align: center;
  max-width: 60%;
  z-index: 1;
}

.section-subtitle {
  margin: 20px auto 0;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  text-align: center;
  max-width: 60%;
  z-index: 1;
}

.table {
  margin: 0 auto;
  width: 1100px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0;
}

.table__cell {
  width: 250px;
  list-style-type: none;
  display: flex;
  gap: 20px;
  flex-direction: column;
  margin: 60px 0 0;
  z-index: 1;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: 600;
  margin: 0;
}

.table__text {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
}

.feynman {
  background: #f2f2f2 url('../images/feynman.png') no-repeat left bottom / 867px 637px;
  height: 890px;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

.feynman__title {
  line-height: 1.15;
  font-size: 120px;
  font-weight: 600;
  max-width: 648px;
  text-align: center;
  margin: 0 0 70px;
  padding-top: 100px;
}

.feynman__subtitle {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  margin: 0;
}

.feynman__link {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
  position: absolute;
  top: 50%;
  right: 20px;
  text-decoration: none;
  color: #2f80ed;
}

.kaufman {
  padding: 90px 0;
  background-color: #1f1f1f;
  position: relative;
  overflow: hidden;
}

.section-title_theme_dark {
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
  color: white;
  position: relative;
  z-index: 1;
}

.section-subtitle_theme_dark {
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  color: white;
  position: relative;
  z-index: 1;
}

.table_theme_dark {
  margin-bottom: 90px;
}

/* и элемента с модификатором вида ключ-значение */
.table__cell_theme_dark {
  width: 200px;
  color: white;
  margin-right: 0;
  margin-top: 80px;
}

.table__heading_theme_dark {
  line-height: 1.15px;
  font-size: 24px;
  font-weight: 600;
  color: white;
}

.table__text_theme_dark {
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
  color: white;
}

.kaufman__triangle {
  background-image: url('../images/kaufman-triangle.svg');
  width: 877px;
  height: 877px;
  position: absolute;
  top: 0;
  right: -210px;
  z-index: 0;
}

.footer {
  min-height: 350px;
  background-color: #1f1f1f;
  color: white;
  display: flex;
  justify-content: center;
}

.footer__columns {
  width: 90%;
  display: flex;
  justify-content: space-between;
  margin: 60px 0 40px;
}

.footer__column_content-copyright {
  flex-basis: 711px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.logo_place_footer {
  width: 228px;
  height: 32px;
  background-image: url('../images/logo_place_footer.svg');
}

.footer__author {
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
  margin: 18px 0;
}

.footer__column-heading {
  line-height: 30px;
  font-size: 18px;
  font-weight: 600;
  margin: 0;
}

.footer__column-links {
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
  list-style-type: none;
  padding: 0;
  margin: 20px 0 16px;
}

.footer__social-icon {
  width: 16px;
  height: 16px;
  margin-right: 10px;
}

.footer__link {
  text-decoration: none;
  color: white;
  font-size: 18px;
  font-weight: normal;
  line-height: 30px;
}

